fix the spacing

--- a/scripts/css/navigation-bar.css
+++ b/scripts/css/navigation-bar.css
@@ -10,6 +10,7 @@ body{
     justify-content: space-evenly;
     /* position*/
     width: 100vw;
+    margin: 1rem;
     /*    style*/
     background-color: #ffffff;
     color: #000000;
